--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  text-align: center;
 }
 
 h1 {
@@ -7,7 +8,25 @@ h1 {
 }
 
 h3 {
-  color: yellow;
+  color: white;
+}
+
+.start {
+  box-sizing:border-box;
+  color:rgb(255, 255, 255);
+  cursor: pointer;
+  display: block;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: auto;
+  line-height: 21px;
+  margin-top: -2px;
+  text-align: center;
+  text-size-adjust: 100%;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
 }
 
 .grid {
@@ -16,6 +35,7 @@ h3 {
   border: 2px solid red;
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
 }
 
 .grid div {
