--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,14 +1,19 @@
 body {
   background-color: black;
   text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-h1 {
+h1, h3, h5 {
   color: white;
 }
 
-h3 {
-  color: white;
+.grey {
+  color: gray;
+}
+
+.yellow {
+  color: yellow;
 }
 
 .start {
@@ -52,4 +57,24 @@ h3 {
 
 .grid .filled {
   background-color: green;
+}
+
+.pauseLabel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: xx-large;
+  top: 0;
+  left: 0;
+  display: flex;
+  background:rgba(0, 0, 0, 0.8);
+}
+
+.pauseLabel div {
+  margin: auto;
+}
+
+.hidden {
+  visibility: hidden;
 }
