--- a/assets/styles.css
+++ b/assets/styles.css
@@ -59,7 +59,7 @@ h1, h3, h5 {
   background-color: green;
 }
 
-.pauseLabel {
+.centerLabel {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -69,9 +69,10 @@ h1, h3, h5 {
   left: 0;
   display: flex;
   background:rgba(0, 0, 0, 0.8);
+  flex-direction: column;
 }
 
-.pauseLabel div {
+.centerLabel div {
   margin: auto;
 }
 
