--- a/assets/styles.css
+++ b/assets/styles.css
@@ -55,7 +55,7 @@ h3 {
   border: 2px solid red;
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin: -2px auto;
 }
 
 .grid.next-piece {
@@ -140,17 +140,58 @@ h3 {
   position: absolute;
   width: 100%;
   height: 100%;
-  color: white;
-  font-size: 2.5em;
   top: 0;
   left: 0;
   display: flex;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   flex-direction: column;
 }
 
 .centerLabel div {
   margin: auto;
+}
+
+.centerLabel h1 {
+  color: white;
+  font-size: 2.5em;
+}
+
+.high-score {
+  border: 1px solid red;
+  color: white;
+}
+
+.high-score .title {
+  padding: 10px;
+  display: flex;
+  background-color: darkred;
+}
+
+.high-score ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.high-score ul li {
+  padding: 10px 0;
+  display: flex;
+}
+
+.high-score ul li .desc {
+  color: red;
+  padding: 0 10px;
+}
+
+.high-score ul li .record {
+  flex: 1;
+  padding: 0 10px;
+  text-align: right;
+}
+
+.high-score h3 {
+  margin: auto;
+  font-size: 1em;
 }
 
 .hidden {
