--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,15 @@
+html {
+  height: 100%;
+}
 body {
   background-color: black;
+  background: linear-gradient(
+    180deg,
+    rgb(102, 128, 123) 0%,
+    rgba(78, 92, 90, 1) 30%,
+    rgba(14, 14, 14, 1) 100%
+  );
+  background-size: 100%;
   text-align: center;
   font-family: 'Press Start 2P', cursive, Arial, sans-serif;
 }
@@ -10,8 +20,9 @@ h5 {
   color: white;
 }
 h1 {
-  font-size: 1.5em;
-  color: red;
+  font-size: 2em;
+  color: rgb(247 112 0);
+  margin: 0.5em;
 }
 
 h3 {
@@ -28,10 +39,11 @@ h3 {
   color: yellow;
 }
 
-.start {
+.start,
+.sound {
   box-sizing: border-box;
   color: rgb(255, 208, 0);
-  background-color: green;
+  background-color: rgb(91, 158, 29);
   border: 2px solid darkgreen;
   padding: calc(0.5em - 1px) 1.375em;
   justify-content: center;
@@ -49,90 +61,119 @@ h3 {
   margin-bottom: 1em;
 }
 
+.sound {
+  background-color: rgba(177, 177, 177, 1);
+  border: 2px solid white;
+  color: rgb(33, 33, 33);
+  position: absolute;
+  left: calc(50% - 270px);
+  width: 170px;
+}
+
+.abs-right {
+  position: absolute;
+  left: calc(50% + 100px);
+  top: 3em;
+}
+
 .grid {
-  width: 200px;
-  height: 400px;
-  border: 2px solid red;
+  width: 400px;
+  height: 800px;
+  border: 2px solid rgb(212, 212, 212);
   display: flex;
   flex-wrap: wrap;
   margin: -2px auto;
 }
 
 .grid.next-piece {
-  width: 80px;
-  height: 80px;
+  width: 160px;
+  height: 160px;
 }
 
 .grid div,
 .grid.next-piece div {
   background-color: #111111;
-  border: 1px solid #333311;
-  width: 20px;
-  height: 20px;
+  border: 1px solid #103623;
+  width: 40px;
+  height: 40px;
   box-sizing: border-box;
   color: green;
 }
 
 .grid .filled.green {
   background: rgb(167, 213, 41);
-  background: radial-gradient(
-    circle,
-    rgb(167, 213, 41) 0%,
-    rgb(91, 158, 29) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(77, 133, 25) 0%,
+    rgb(91, 158, 29) 50%,
+    rgb(95, 168, 27) 51%,
+    rgb(167, 213, 41) 100%
   );
 }
 
 .grid .filled.red {
   background: rgb(247, 112, 0);
-  background: radial-gradient(
-    circle,
-    rgba(247, 112, 0, 1) 0%,
-    rgba(176, 22, 22, 1) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(163, 27, 27) 0%,
+    rgba(176, 22, 22, 1) 50%,
+    rgb(167, 17, 17) 51%,
+    rgba(247, 112, 0, 1) 100%
   );
 }
 
 .grid .filled.yellow {
   background: rgb(235, 222, 168);
-  background: radial-gradient(
-    circle,
-    rgb(253, 253, 0) 0%,
-    rgb(187, 145, 5) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(185, 145, 12) 0%,
+    rgb(219, 169, 5) 50%,
+    rgb(187, 145, 5) 51%,
+    rgb(253, 253, 0) 100%
   );
 }
 
 .grid .filled.blue {
   background: rgb(87, 141, 250);
-  background: radial-gradient(
-    circle,
-    rgba(87, 141, 250, 1) 0%,
-    rgba(93, 113, 219, 1) 100%
+  background: linear-gradient(
+    135deg,
+    rgba(30, 87, 153, 1) 0%,
+    rgba(41, 137, 216, 1) 50%,
+    rgba(32, 124, 202, 1) 51%,
+    rgba(125, 185, 232, 1) 100%
   );
 }
 
 .grid .filled.white {
   background: rgb(227, 227, 227);
-  background: radial-gradient(
-    circle,
-    rgba(227, 227, 227, 1) 0%,
-    rgba(177, 177, 177, 1) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(167, 165, 165) 0%,
+    rgba(177, 177, 177, 1) 50%,
+    rgb(168, 165, 165) 51%,
+    rgba(227, 227, 227, 1) 100%
   );
 }
 
 .grid .filled.purple {
   background: rgb(225, 155, 251);
-  background: radial-gradient(
-    circle,
-    rgba(225, 155, 251, 1) 0%,
-    rgba(164, 93, 219, 1) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(146, 84, 194) 0%,
+    rgba(164, 93, 219, 1) 50%,
+    rgb(146, 74, 201) 51%,
+    rgba(225, 155, 251, 1) 100%
   );
 }
 
 .grid .filled.cyan {
   background: rgb(159, 232, 240);
-  background: radial-gradient(
-    circle,
-    rgba(159, 232, 240, 1) 0%,
-    rgba(7, 141, 148, 1) 100%
+  background: linear-gradient(
+    135deg,
+    rgb(23, 159, 167) 0%,
+    rgba(7, 141, 148, 1) 50%,
+    rgb(3, 157, 165) 51%,
+    rgba(159, 232, 240, 1) 100%
   );
 }
 
